<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="8dp">

    <Button
        android:id="@+id/like"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/like" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:nestedScrollingEnabled="false">

            <ProgressBar
                android:id="@+id/epi_loading_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:indeterminate="true" />

            <LinearLayout
                android:id="@+id/episode_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false">

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="01" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="02" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="03" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="04" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="05" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="06" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="07" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="08" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="09" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="10" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="11" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="12" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="13" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/movie_title"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/movie_title" />

    <TextView
        android:id="@+id/genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genres"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/separator"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TomsTawts:\n any solution which doesn't invovle using a placeholde" />


</LinearLayout>